syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";

option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "SchemaProto";

// User message
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string avatar_url = 5;
  repeated Organization orgs = 6;
  string created_on = 7; // Date string YYYY-MM-DD
}

// Organization message
message Organization {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string metro = 5;
  int32 member_count = 6;
  bool is_primary = 7;
  int32 user_balance = 8; // User's balance in this org (cents)
  int32 active_items = 9; // User's active rentals/lendings
  string created_on = 10; // Date string YYYY-MM-DD
  string admin_email = 11;
  string admin_phone = 12;
  string user_role = 13; // Role of the user in this organization (SUPER_ADMIN, ADMIN, MEMBER, NULL)
  repeated User admins = 14; // List of SUPER_ADMIN and ADMIN users in the organization. Populated in SearchOrganizations()
}
